--- a/public/css/master.css
+++ b/public/css/master.css
@@ -11,6 +11,7 @@ section{
   margin-top: 1em;
   margin-left: 10%;
   background-color: rgb(212, 212, 212);
+  box-sizing: border-box;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.34), 0 2px 1px rgba(0, 0, 0, 0.11);
 }
 
@@ -37,6 +38,14 @@ h1{
   margin-right: 10px;
   transition: color 0.2s ease-in-out;
   cursor: pointer;
+}
+
+.toggle{
+  color: rgb(75, 75, 75);
+}
+
+.toggle:hover{
+  color: rgb(115, 115, 115);
 }
 
 .activate{
