--- a/public/templates/pinActions.html
+++ b/public/templates/pinActions.html
@@ -1,4 +1,4 @@
 <div class="pin">
-    <i class="fa activate fa-2x" ng-class="{'fa-check-circle-o' : !open, 'fa-check-circle' : open}" ng-click="openUp()"></i>
+    <i class="fa fa-2x" ng-class="{'fa-play-circle-o' : !active, 'fa-pause-circle-o' : active, 'toggle' : open, 'inactive' : !open}" ng-click="toggle()"></i>
     <h2>Pin {{pinNumber}}</h2>
 </div>
