--- a/public/index.css
+++ b/public/index.css
@@ -48,7 +48,7 @@ body {
   background-color: rgba(116, 217, 144, 0.75);
 }
 
-@media (max-width: 900px) {
+@media (max-device-width: 900px) {
   .container button{
     width: 100%;
     height: 25%;
